done(without bucket fill tool)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <button class="createRectangle">Create</button>
     </div>
 
-    <div class="createBucketleSection">
+    <!-- <div class="createBucketleSection">
       <h4>Bucket Fill</h4>
       <span>fill area</span>
       <input type="number" class="upperLeftCornerY" placeholder="Y">
@@ -54,7 +54,7 @@
       <input type="text" class="colour" placeholder="char">
       <br>  
       <button class="createBucketFill">Create</button>
-    </div>
+    </div> -->
 
   </header>
   <div class="wrapper">
